# akp03e-satellite

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  mise.toml  sdkconfig.defaults
.github/workflows/: firmware-build.yml  host-tests.yml
components/akp03e_protocol/: CMakeLists.txt  akp03e_protocol.cpp
components/akp03e_protocol/include/: akp03e_protocol.hpp
components/akp03e_tx_sequence/: CMakeLists.txt  akp03e_tx_sequence.cpp
components/akp03e_tx_sequence/include/: akp03e_tx_sequence.hpp
components/akp03e_usb/: CMakeLists.txt  akp03e_usb.cpp
components/akp03e_usb/include/: akp03e_usb.hpp
components/akp03e_usb_descriptor/: CMakeLists.txt  akp03e_usb_descriptor.cpp
components/akp03e_usb_quirks/: CMakeLists.txt  akp03e_usb_quirks.cpp
components/companion_client/: CMakeLists.txt  companion_client.cpp
components/companion_protocol/: CMakeLists.txt  companion_protocol.cpp
components/device_config/: CMakeLists.txt  device_config.cpp  serial_config_console.cpp
components/image_transform/: CMakeLists.txt  image_transform.cpp
components/jpeg_encoder/: CMakeLists.txt  jpeg_encoder.cpp
components/surface_state/: CMakeLists.txt  surface_state.cpp
components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp
docs/: architecture.md  hardware-test.md
host_tests/: CMakeLists.txt  test_main.cpp  test_mock_companion.py
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
scripts/: host-test.sh  idf-build.sh  idf.sh
tools/: mock_companion.py
(+10 files in other folders)
